修改图片加载问题

--- a/HexoJiadongpo/source/_posts/数据中台/数据中台建设杂谈.md
+++ b/HexoJiadongpo/source/_posts/数据中台/数据中台建设杂谈.md
@@ -18,13 +18,13 @@ categories: [数据中台]
 
 现有的数据仓库架构
 如下图所示，按照业内标准的数据架构，数据采集层、数据计算层、数据服务层、数据应用层进行描述。
-!["现有的数据仓库架构"](images/数据中台/现有的数据仓库架构.jpg)
+!["现有的数据仓库架构"](/images/数据中台/现有的数据仓库架构.jpg)
 
 首先是从各业务部门数据库，通过OGG、Sqoop、DataX、Kettle等工具同步定时同步数据到数据中心存储系统上，包括大数据平台HDFS、关系型数据库。然后提供几种查询平台，如kylin、hive、oracle等，进行数据获取，如通过Kylin建模的方式，离线预处理T-1的离线数据；通过oracle数据库，提数人员写SQL查询等，得到想要的数据，目前只支持离线数据。数据同步完成对，外的的数据服务，目前提供了手工提数工单、数据网关接口、帆软BI报表、帆软可视化等方式对业务部门提供查询。
 
 ### 标准数据中台构架
 如下图所示
-!["标准数据中台构架"](images/数据中台/标准数据中台构架.jpg)
+!["标准数据中台构架"](/images/数据中台/标准数据中台构架.jpg)
 
 
 通用的数据中台架构，即从数据同步->模型抽象->对外应用进行划分，其中操作层作了些同步、清洗、日志采集等收集数据的事情；公共维度对业务数据进行建模，划分度量、维度等对数据进行建模，当然也可以采用其它建模方式；应用数据层是对创建好的数据对外提供服务的方式，包含传输数据的渠道、展示数据的方式等。
@@ -55,7 +55,7 @@ categories: [数据中台]
 
 ### 理想的仓库
 如图所示。
-!["理想的仓库"](images/数据中台/理想的仓库.jpg)
+!["理想的仓库"](/images/数据中台/理想的仓库.jpg)
 
 提供批流两种计算方式、对外针对不同的需求，提供不同的对外数据输出。优化建模，改进同步，增加消息同步补偿。
 
